correção links, dark mode e bugs

--- a/css/index/layout/contato.scss
+++ b/css/index/layout/contato.scss
@@ -52,7 +52,7 @@
 .contato-grid button{
     margin-bottom: 2rem;
     padding: 1rem 1.3rem;
-    background-color: $roxo;
+    background-color:var(--bg-button);
     border-radius: 1rem;
     color: white;
     font-family: $texto;
